Update dependencies to latest

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,17 +4,19 @@
   "private": true,
   "proxy": "http://localhost:8080/",
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "classnames": "^2.2.6",
-    "notistack": "^1.0.5",
-    "react": "^17.0.1",
-    "react-cookie": "^4.0.3",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "socket.io-client": "^4.0.0",
-    "web-vitals": "^1.0.1"
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
+    "classnames": "^2.3.2",
+    "notistack": "^3.0.1",
+    "react": "^18.0.2",
+    "react-cookie": "^6.1.1",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1",
+    "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.2",
+    "web-vitals": "^3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
